unpackaged/main/default/objects/shop__c/fields/account_owner__c.field-meta.xml
<CustomField>
    <fullName>account_owner__c</fullName>
    <formula>company_id__r.Owner.FirstName  + &quot; &quot; +  company_id__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>