unpackaged/main/default/objects/shop__c/fields/agency__c.field-meta.xml
<CustomField>
    <fullName>agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shops (Agency)</relationshipLabel>
    <relationshipName>agency_shops</relationshipName>
    <type>Lookup</type>
</CustomField>