unpackaged/main/default/objects/shop__c/fields/Agency_text__c.field-meta.xml
<CustomField>
    <fullName>Agency_text__c</fullName>
    <formula>agency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency text</label>
    <type>Text</type>
</CustomField>