unpackaged/main/default/objects/shop__c/fields/alexa_rank__c.field-meta.xml
<CustomField>
    <fullName>alexa_rank__c</fullName>
    <label>Alexa Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>