unpackaged/main/default/objects/shop__c/fields/audit__c.field-meta.xml
<CustomField>
    <fullName>audit__c</fullName>
    <label>Audit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
                <label>Customer reviews only</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Audit to begin as soon as possible</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Audit to begin earliest in 2 weeks</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Audit to begin earliest in 4 weeks</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Audit to begin earliest in 6 weeks</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Audit to begin earliest in 8 weeks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>