unpackaged/main/default/objects/shop__c/fields/audit_responsible__c.field-meta.xml
<CustomField>
    <fullName>audit_responsible__c</fullName>
    <label>Audit Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>