unpackaged/main/default/objects/shop__c/fields/average_rating__c.field-meta.xml
<CustomField>
    <fullName>average_rating__c</fullName>
    <label>Average Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>