unpackaged/main/default/objects/shop__c/fields/Blocked_for_GoogleAds__c.field-meta.xml
<CustomField>
    <fullName>Blocked_for_GoogleAds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked for GoogleAds</label>
    <type>Checkbox</type>
</CustomField>