unpackaged/main/default/objects/shop__c/fields/budget_manager__c.field-meta.xml
<CustomField>
    <fullName>budget_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Budget Manager for</relationshipLabel>
    <relationshipName>BudjetManagerShops</relationshipName>
    <type>Lookup</type>
</CustomField>