unpackaged/main/default/objects/shop__c/fields/Business_from__c.field-meta.xml
<CustomField>
    <fullName>Business_from__c</fullName>
    <formula>IF ( 
 AND ( 
   RecordType.Name =&#39;Customer Shop&#39;, 
   ISBLANK(sales_responsible_text__c) 
   ), 
      &#39;Website&#39;, &#39;&#39; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business from</label>
    <type>Text</type>
</CustomField>