unpackaged/main/default/objects/shop__c/fields/certificate_awarded__c.field-meta.xml
<CustomField>
    <fullName>certificate_awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>certificate awarded</label>
    <type>Checkbox</type>
</CustomField>