unpackaged/main/default/objects/shop__c/fields/certificate_disabled_on__c.field-meta.xml
<CustomField>
    <fullName>certificate_disabled_on__c</fullName>
    <label>Disabled on</label>
    <type>DateTime</type>
</CustomField>