unpackaged/main/default/objects/shop__c/fields/certificate_disabled_reasons__c.field-meta.xml
<CustomField>
    <fullName>certificate_disabled_reasons__c</fullName>
    <description>TBD</description>
    <label>Reason for blocking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>