unpackaged/main/default/objects/shop__c/fields/certificateStatus__c.field-meta.xml
<CustomField>
    <fullName>certificateStatus__c</fullName>
    <label>certificateStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DISABLED</fullName>
                <label>disabled</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>expired</label>
            </value>
            <value>
                <fullName>NO_AUDIT</fullName>
                <label>no audit</label>
            </value>
            <value>
                <fullName>INTEGRATION</fullName>
                <label>not (yet) approved</label>
            </value>
            <value>
                <fullName>TEST</fullName>
                <label>test</label>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
                <label>valid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>