unpackaged/main/default/objects/shop__c/fields/certificateStatus_LI__c.field-meta.xml
<CustomField>
    <fullName>certificateStatus_LI__c</fullName>
    <description>Field is necessary for Leading Indicator Reports, since
- a Shop without a certificate can either have certificateStatus &quot;No Audit&quot; or BLANK
- Salesforce Reports can&#39;t include BLANK values into a custom defined bucket.
As soon as either of those two changes, the field can be removed.</description>
    <formula>IF(ISBLANK(TEXT(certificateStatus__c)),&quot;No Audit&quot;,TEXT(certificateStatus__c))</formula>
    <label>certificateStatus(LI)</label>
    <type>Text</type>
</CustomField>