unpackaged/main/default/objects/shop__c/fields/certificateType__c.field-meta.xml
<CustomField>
    <fullName>certificateType__c</fullName>
    <label>certificateType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CLASSIC</fullName>
                <label>Classic</label>
            </value>
            <value>
                <fullName>EXCELLENCE</fullName>
                <label>Excellence</label>
            </value>
            <value>
                <fullName>MIGRATION</fullName>
                <label>Migration C2E</label>
            </value>
            <value>
                <fullName>SPONSORSHIP</fullName>
                <label>Sponsored Excellence</label>
            </value>
            <value>
                <fullName>NO_AUDIT</fullName>
                <label>Without Audit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>