unpackaged/main/default/objects/shop__c/fields/Change_of_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Conversion_Rate__c</fullName>
    <label>Change of Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>