unpackaged/main/default/objects/shop__c/fields/churn_score__c.field-meta.xml
<CustomField>
    <fullName>churn_score__c</fullName>
    <label>Churn Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>