unpackaged/main/default/objects/shop__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <description>https://aquilliance.atlassian.net/browse/PROTSH-91 - AW</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>