unpackaged/main/default/objects/shop__c/fields/comp_other__c.field-meta.xml
<CustomField>
    <fullName>comp_other__c</fullName>
    <label>Other Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>