unpackaged/main/default/objects/shop__c/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <formula>TEXT(company_id__r.status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Status</label>
    <type>Text</type>
</CustomField>