unpackaged/main/default/objects/shop__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Shop Contact for</relationshipLabel>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>