unpackaged/main/default/objects/shop__c/fields/contracted_at__c.field-meta.xml
<CustomField>
    <fullName>contracted_at__c</fullName>
    <label>contracted at</label>
    <type>Date</type>
</CustomField>