unpackaged/main/default/objects/shop__c/fields/Conversion_Rate_last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate_last_30_days__c</fullName>
    <label>Conversion Rate last 30 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>