unpackaged/main/default/objects/shop__c/fields/Core_Url__c.field-meta.xml
<CustomField>
    <fullName>Core_Url__c</fullName>
    <label>Core Url</label>
    <type>Url</type>
</CustomField>