unpackaged/main/default/objects/shop__c/fields/Core_Url_Text__c.field-meta.xml
<CustomField>
    <fullName>Core_Url_Text__c</fullName>
    <label>Core Url Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>