unpackaged/main/default/objects/shop__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALB</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AUT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>BLR</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BIH</fullName>
                <label>Bosnia and Herzegovina</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>BGR</fullName>
                <label>Bulgaria</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>HRV</fullName>
                <label>Croatia</label>
            </value>
            <value>
                <fullName>CUW</fullName>
                <label>Curacao</label>
            </value>
            <value>
                <fullName>CYP</fullName>
                <label>Cyprus</label>
            </value>
            <value>
                <fullName>CZE</fullName>
                <label>Czech Republic</label>
            </value>
            <value>
                <fullName>DNK</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>EE</fullName>
                <label>Estonia</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Finland</label>
            </value>
            <value>
                <fullName>FRA</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>GE</fullName>
                <label>Georgia</label>
            </value>
            <value>
                <fullName>DEU</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>GI</fullName>
                <label>Gibraltar</label>
            </value>
            <value>
                <fullName>GBR</fullName>
                <label>Great Britain</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>Greece</label>
            </value>
            <value>
                <fullName>HKG</fullName>
                <label>Hong Kong</label>
            </value>
            <value>
                <fullName>HU</fullName>
                <label>Hungary</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>India</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>Indonesia</label>
            </value>
            <value>
                <fullName>IRL</fullName>
                <label>Ireland</label>
            </value>
            <value>
                <fullName>ISL</fullName>
                <label>Island</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>