unpackaged/main/default/objects/shop__c/fields/crawled_Shopsoftware__c.field-meta.xml
<CustomField>
    <fullName>crawled_Shopsoftware__c</fullName>
    <description>crawled Shopsoftware from Builtwith, imported via APEX class from a Metabase API Endpoint</description>
    <inlineHelpText>crawled by Builtwith</inlineHelpText>
    <label>crawled Shopsoftware</label>
    <length>255</length>
    <type>Text</type>
</CustomField>