unpackaged/main/default/objects/shop__c/fields/crawled_Shopsoftware_last_detected_Date__c.field-meta.xml
<CustomField>
    <fullName>crawled_Shopsoftware_last_detected_Date__c</fullName>
    <description>Deprecated as of 16.05.2022.
This field will not be updated anymore due to technical issues in the import process from the datalake.</description>
    <label>crawled Shopsoftware last detected Date</label>
    <type>Date</type>
</CustomField>