unpackaged/main/default/objects/shop__c/fields/Created_At_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Created_At_Datetime__c</fullName>
    <formula>Text(  CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created At Datetime</label>
    <type>Text</type>
</CustomField>