unpackaged/main/default/objects/shop__c/fields/current_state_active_since_date__c.field-meta.xml
<CustomField>
    <fullName>current_state_active_since_date__c</fullName>
    <label>current state active since date</label>
    <type>DateTime</type>
</CustomField>