unpackaged/main/default/objects/shop__c/fields/Days_since_contracted_at__c.field-meta.xml
<CustomField>
    <fullName>Days_since_contracted_at__c</fullName>
    <formula>TODAY() - contracted_at__c</formula>
    <label>Days since contracted at</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>