unpackaged/main/default/objects/shop__c/fields/Deciding_Date__c.field-meta.xml
<CustomField>
    <fullName>Deciding_Date__c</fullName>
    <formula>contracted_at__c +90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deciding Date</label>
    <type>Date</type>
</CustomField>