unpackaged/main/default/objects/shop__c/fields/Estimated_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Turnover__c</fullName>
    <label>Estimated Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>