unpackaged/main/default/objects/shop__c/fields/eTrusted_Channel_Reference__c.field-meta.xml
<CustomField>
    <fullName>eTrusted_Channel_Reference__c</fullName>
    <description>the ChannelRef of the Shop in eTrusted</description>
    <label>eTrusted Channel Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>