unpackaged/main/default/objects/shop__c/fields/eTrusted_Migration_StartDate__c.field-meta.xml
<CustomField>
    <fullName>eTrusted_Migration_StartDate__c</fullName>
    <label>eTrusted Migration StartDate</label>
    <type>Date</type>
</CustomField>