unpackaged/main/default/objects/shop__c/fields/Excellence_Fee_gross__c.field-meta.xml
<CustomField>
    <fullName>Excellence_Fee_gross__c</fullName>
    <label>Excellence Fee (gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>