unpackaged/main/default/objects/shop__c/fields/Expected_Shop_Reviews_daily__c.field-meta.xml
<CustomField>
    <fullName>Expected_Shop_Reviews_daily__c</fullName>
    <description>Yesterday&#39;s Expected number of Shop Reviews (According to linear Regression of past number of Shop Reviews)</description>
    <label>Expected Shop Reviews (daily)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>