unpackaged/main/default/objects/shop__c/fields/Expected_Usage_Events_daily__c.field-meta.xml
<CustomField>
    <fullName>Expected_Usage_Events_daily__c</fullName>
    <description>Yesterday&#39;s Expected Usage Events (According to linear Regression of past Usage Events)</description>
    <label>Expected Usage Events (daily)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>