unpackaged/main/default/objects/shop__c/fields/Expected_uSRI_daily__c.field-meta.xml
<CustomField>
    <fullName>Expected_uSRI_daily__c</fullName>
    <description>Yesterday&#39;s unique Shop Review Invites (According to linear Regression of past unique Shop Review Invites)</description>
    <label>Expected uSRI (daily)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>