unpackaged/main/default/objects/shop__c/fields/facebook_likes__c.field-meta.xml
<CustomField>
    <fullName>facebook_likes__c</fullName>
    <label>Facebook Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>