unpackaged/main/default/objects/shop__c/fields/fifth_review_received__c.field-meta.xml
<CustomField>
    <fullName>fifth_review_received__c</fullName>
    <description>The day the fifth shop review was received</description>
    <inlineHelpText>datestamp: the first day the review_count__c was &gt;=5</inlineHelpText>
    <label>Fifth Review on</label>
    <type>Date</type>
</CustomField>