unpackaged/main/default/objects/shop__c/fields/FindMatchingLeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>FindMatchingLeadTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to run FLOW_ShopFindMatchingLead</description>
    <label>FindMatchingLeadTrigger</label>
    <type>Checkbox</type>
</CustomField>