unpackaged/main/default/objects/shop__c/fields/first_activation_of_certificate_on__c.field-meta.xml
<CustomField>
    <fullName>first_activation_of_certificate_on__c</fullName>
    <label>First Activation of Certificate on</label>
    <type>DateTime</type>
</CustomField>