unpackaged/main/default/objects/shop__c/fields/first_audit_completed_on__c.field-meta.xml
<CustomField>
    <fullName>first_audit_completed_on__c</fullName>
    <label>First Audit Completed On</label>
    <type>DateTime</type>
</CustomField>