unpackaged/main/default/objects/shop__c/fields/First_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Date__c</fullName>
    <label>First Order Date</label>
    <type>Date</type>
</CustomField>