unpackaged/main/default/objects/shop__c/fields/first_time_shop_sent_us_valid_orders__c.field-meta.xml
<CustomField>
    <fullName>first_time_shop_sent_us_valid_orders__c</fullName>
    <description>Valid indicator for first successful Standard Integration (SI). 
https://wiki.trustedshops.com/pages/viewpage.action?pageId=59813121</description>
    <label>first time shop sent us valid orders</label>
    <type>DateTime</type>
</CustomField>