unpackaged/main/default/objects/shop__c/fields/forecasted_membership_fee__c.field-meta.xml
<CustomField>
    <fullName>forecasted_membership_fee__c</fullName>
    <label>Forcasted Membership Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>