unpackaged/main/default/objects/shop__c/fields/From_Partner__c.field-meta.xml
<CustomField>
    <fullName>From_Partner__c</fullName>
    <formula>IF(ISBLANK(agency__c), False, IF(ISPICKVAL(agency__r.partner_status__c, &quot;1&quot;), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Partner</label>
    <type>Checkbox</type>
</CustomField>