unpackaged/main/default/objects/shop__c/fields/GI_50__c.field-meta.xml
<CustomField>
    <fullName>GI_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GI 50</label>
    <type>Checkbox</type>
</CustomField>