unpackaged/main/default/objects/shop__c/fields/google_adwords__c.field-meta.xml
<CustomField>
    <fullName>google_adwords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Adwords</label>
    <type>Checkbox</type>
</CustomField>