unpackaged/main/default/objects/shop__c/fields/Google_My_Business_Rating__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Information from Reputation Manager</description>
    <label>Google My Business Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>