unpackaged/main/default/objects/shop__c/fields/Google_My_Business_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business_Reviews__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Information from Reputation Manager</description>
    <label>Google My Business Reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>