unpackaged/main/default/objects/shop__c/fields/Google_My_Business_values_changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business_values_changed_Date__c</fullName>
    <description>Information from Reputation Manager</description>
    <label>Google My Business values changed Date</label>
    <type>Date</type>
</CustomField>