unpackaged/main/default/objects/shop__c/fields/google_pages__c.field-meta.xml
<CustomField>
    <fullName>google_pages__c</fullName>
    <label>Google Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>