unpackaged/main/default/objects/shop__c/fields/guarantee_count__c.field-meta.xml
<CustomField>
    <fullName>guarantee_count__c</fullName>
    <label>Number of Guarantees (last 12 months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>