unpackaged/main/default/objects/shop__c/fields/Has_Agency__c.field-meta.xml
<CustomField>
    <fullName>Has_Agency__c</fullName>
    <formula>IF(ISBLANK(agency__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Agency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>