unpackaged/main/default/objects/shop__c/fields/Has_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Has_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Certificate</label>
    <type>Checkbox</type>
</CustomField>