unpackaged/main/default/objects/shop__c/fields/Has_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Has_GDPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has GDPR</label>
    <type>Checkbox</type>
</CustomField>