unpackaged/main/default/objects/shop__c/fields/Has_Google_Integration__c.field-meta.xml
<CustomField>
    <fullName>Has_Google_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Google Integration</label>
    <type>Checkbox</type>
</CustomField>