unpackaged/main/default/objects/shop__c/fields/Has_Legal_Service__c.field-meta.xml
<CustomField>
    <fullName>Has_Legal_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Legal Service</label>
    <type>Checkbox</type>
</CustomField>