unpackaged/main/default/objects/shop__c/fields/Has_Local_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Has_Local_Reviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Local Reviews</label>
    <type>Checkbox</type>
</CustomField>