unpackaged/main/default/objects/shop__c/fields/Has_Product_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Has_Product_Reviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Product Reviews</label>
    <type>Checkbox</type>
</CustomField>