unpackaged/main/default/objects/shop__c/fields/Has_Protection__c.field-meta.xml
<CustomField>
    <fullName>Has_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Protection</label>
    <type>Checkbox</type>
</CustomField>