unpackaged/main/default/objects/shop__c/fields/Has_Protection_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Has_Protection_Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Protection Enterprise</label>
    <type>Checkbox</type>
</CustomField>