unpackaged/main/default/objects/shop__c/fields/Has_Protection_Premium__c.field-meta.xml
<CustomField>
    <fullName>Has_Protection_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Protection Premium</label>
    <type>Checkbox</type>
</CustomField>