unpackaged/main/default/objects/shop__c/fields/Has_Review_Collector__c.field-meta.xml
<CustomField>
    <fullName>Has_Review_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Review Collector</label>
    <type>Checkbox</type>
</CustomField>