unpackaged/main/default/objects/shop__c/fields/Has_Security_360__c.field-meta.xml
<CustomField>
    <fullName>Has_Security_360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Security 360</label>
    <type>Checkbox</type>
</CustomField>