unpackaged/main/default/objects/shop__c/fields/Has_Shop_Rating__c.field-meta.xml
<CustomField>
    <fullName>Has_Shop_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Shop Rating</label>
    <type>Checkbox</type>
</CustomField>