unpackaged/main/default/objects/shop__c/fields/Has_SI__c.field-meta.xml
<CustomField>
    <fullName>Has_SI__c</fullName>
    <formula>IF( ISPICKVAL(standard_integration_status__c, &quot;1&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has SI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>