unpackaged/main/default/objects/shop__c/fields/Has_Traffic_Package__c.field-meta.xml
<CustomField>
    <fullName>Has_Traffic_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Traffic Package</label>
    <type>Checkbox</type>
</CustomField>