unpackaged/main/default/objects/shop__c/fields/HealthScore__c.field-meta.xml
<CustomField>
    <fullName>HealthScore__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HealthScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>