unpackaged/main/default/objects/shop__c/fields/important_information__c.field-meta.xml
<CustomField>
    <fullName>important_information__c</fullName>
    <label>Important information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>