unpackaged/main/default/objects/shop__c/fields/Integration_Modification__c.field-meta.xml
<CustomField>
    <fullName>Integration_Modification__c</fullName>
    <description>This field is created for CSM(view),AM(view),PX(edit)</description>
    <label>Integration Modification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom display of Trustbadge</fullName>
            </value>
            <value>
                <fullName>Multi-language Trustbadge code</fullName>
            </value>
            <value>
                <fullName>Multi-language Widgets</fullName>
            </value>
            <value>
                <fullName>SKU used (child)</fullName>
            </value>
            <value>
                <fullName>SKU used (product id)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>