unpackaged/main/default/objects/shop__c/fields/Integration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Integration_Notes__c</fullName>
    <description>Created for CSM(view),AM(view),PX(edit)</description>
    <label>Integration Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>