unpackaged/main/default/objects/shop__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>This field is created for CSM(view), AM(view) &amp; PX(edit)</description>
    <label>Integration Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collecting by Trustbadge</fullName>
            </value>
            <value>
                <fullName>Collecting by Review Collector</fullName>
            </value>
            <value>
                <fullName>Collecting by Rate-now</fullName>
            </value>
            <value>
                <fullName>Collecting by Questionnaire Link API</fullName>
            </value>
            <value>
                <fullName>Collecting by Event API</fullName>
            </value>
            <value>
                <fullName>Collecting by Order Status</fullName>
            </value>
            <value>
                <fullName>Manual integration</fullName>
            </value>
            <value>
                <fullName>Plugin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>