unpackaged/main/default/objects/shop__c/fields/Invite_Conversion_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Invite_Conversion_Dashboard__c</fullName>
    <formula>IF( Using_eTrusted_Invite_Conversion_Feature__c ,
    HYPERLINK(&quot;https://employees.trustedshops.com/analytics/invite-conversion/analyticsChannelId=chl-XYZ&quot;, &quot;Invite Conversion Dashboard&quot;),
    &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invite Conversion Dashboard</label>
    <type>Text</type>
</CustomField>