unpackaged/main/default/objects/shop__c/fields/InviteRuleCheckDate__c.field-meta.xml
<CustomField>
    <fullName>InviteRuleCheckDate__c</fullName>
    <description>filled by InviteRuleCheck_Batch
When a case is created, asking the Customer to check his invite rule settings, this one gets populated</description>
    <label>InviteRuleCheckDate</label>
    <type>Date</type>
</CustomField>