unpackaged/main/default/objects/shop__c/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <description>The same logic is used in the FLOW_Shop_BeforeTrigger.</description>
    <formula>IF(AND(!ISBLANK(valid_from__c), valid_from__c &lt;= NOW(), OR(valid_to__c &gt;= NOW(), ISBLANK(valid_to__c))), true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Active?</label>
    <type>Checkbox</type>
</CustomField>